// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process XML nodes correctly correctly creates nodes from XML 1`] = `
Array [
  Array [
    Object {
      "attributes": Object {
        "id": "bk101",
      },
      "children": Array [],
      "content": "",
      "id": "bk101",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "book",
      "parent": "whatever",
      "xmlChildren": Array [
        Object {
          "attributes": Object {},
          "content": "Gambardella, Matthew",
          "name": "author",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "XML Developer's Guide",
          "name": "title",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "Computer",
          "name": "genre",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "44.95",
          "name": "price",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "2000-10-01",
          "name": "publish_date",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "An in-depth look at creating applications
            with XML.",
          "name": "description",
          "xmlChildren": Array [],
        },
      ],
    },
  ],
  Array [
    Object {
      "attributes": Object {
        "id": "bk102",
      },
      "children": Array [],
      "content": "",
      "id": "bk102",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "book",
      "parent": "whatever",
      "xmlChildren": Array [
        Object {
          "attributes": Object {},
          "content": "Ralls, Kim",
          "name": "author",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "Midnight Rain",
          "name": "title",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "Fantasy",
          "name": "genre",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "5.95",
          "name": "price",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "2000-12-16",
          "name": "publish_date",
          "xmlChildren": Array [],
        },
        Object {
          "attributes": Object {},
          "content": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
          "name": "description",
          "xmlChildren": Array [],
        },
      ],
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk101",
        },
        "children": Array [],
        "content": "",
        "id": "bk101",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "book",
        "parent": "whatever",
        "xmlChildren": Array [
          Object {
            "attributes": Object {},
            "content": "Gambardella, Matthew",
            "name": "author",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "XML Developer's Guide",
            "name": "title",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "Computer",
            "name": "genre",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "44.95",
            "name": "price",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "2000-10-01",
            "name": "publish_date",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "An in-depth look at creating applications
            with XML.",
            "name": "description",
            "xmlChildren": Array [],
          },
        ],
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <description>An in-depth look at creating applications
            with XML.</description>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk102",
        },
        "children": Array [],
        "content": "",
        "id": "bk102",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "book",
        "parent": "whatever",
        "xmlChildren": Array [
          Object {
            "attributes": Object {},
            "content": "Ralls, Kim",
            "name": "author",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "Midnight Rain",
            "name": "title",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "Fantasy",
            "name": "genre",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "5.95",
            "name": "price",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "2000-12-16",
            "name": "publish_date",
            "xmlChildren": Array [],
          },
          Object {
            "attributes": Object {},
            "content": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
            "name": "description",
            "xmlChildren": Array [],
          },
        ],
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <description>An in-depth look at creating applications
            with XML.</description>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;
